corrected nav overlay

--- a/index.html
+++ b/index.html
@@ -45,64 +45,65 @@
 	<!-- End Google Tag Manager -->
 	<section id="welcome">
 		<header class="close">
-		<nav role='navigation' id="mainnav">
-		<div class="relative">
-		<div class="holder">
-			<ul>
-				<li><a href="#welcome">Home</a></li>
-				<li><a href="#about">About Me</a></li>
-				<li><a href="#portfolio">Testionials</a></li>
-				<li><a href="#resume">Portfolio</a></li>
-				<li><a href="#contactMe">Contact Me</a></li>
-			</ul>
-		</div>
-	</div>
-</nav>
-<div class="hamb">
-  <a href="#"><i class="fa fa-bars"></i></a>
-</div>
-<canvas id="bubble">
-</header>
-<div class="welcome">
-	<i class="logo fade-in one"></i>
-	<h1 class="fade-in two">Hello <strong>World</strong></h1>
-	<p class="fade-in three" "text"><strong>I am </strong>Farishta Haider & I love
-		<span class="rw-words rw-words-1"> <span>tech.</span>
-		<span>web development.</span>
-		<span>pop culture.</span>
-		<span>marketing.</span>
-		<span>social media.</span>
-		<span>awkward moments.</span>
-	</span></p>
-	<p><a href="#resume" class="button fade-in four">Welcome to me</a></p>
-	<div class="scroll-down clear"><i class="fa fa-angle-double-down animated infinite bounce"></i>
-	</div>
-</div>
-</section>
-<section id="about">
-	<div class="bg-image"></div>
-	<div class="holder">
-		<div class="title scrollflow -slide-top -opacity"><h2>About</h2></div>
-		<div id="tabs-container">
-			<ul class="tabs-menu title scrollflow -slide-top -opacity">
-				<li class="current"><a href="#bio">Bio</a></li>
-				<li><a href="#skills">Skills</a></li>
-				<li><a href="#experience">Experience</a></li>
-				<!-- <li><a href="#education">Education</a></li> -->
-			</ul>
-			<div class="tab">
-				<aside class="tab-content scrollflow -slide-right -opacity" id="bio">
-					<p>Hello, my name is  Farishta Haider.</br>
-						A <strong>Full-Stack Developer</strong> with a strong background in Marketing. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
-						<div class="links scrollflow"><a href="https://drive.google.com/open?id=0B9BDSYdQ3pr8S3F1NEhHd0lzeG8" target="_blank" class="button"><i class="fa fa-download"></i> Download Resume</a>
-							<a href="mailto:farishta.haider@gmail.com" class="button"><i class="fa fa-paper-plane"></i> Hire Me</a>
-						</div>
+			<nav role='navigation' id="mainnav">
+				<div class="relative">
+					<div class="holder">
+						<ul>
+							<li><a href="#welcome">Home</a></li>
+							<li><a href="#about">About Me</a></li>
+							<li><a href="#portfolio">Testimonials</a></li>
+							<li><a href="#resume">Portfolio</a></li>
+							<li><a href="#contactMe">Contact Me</a></li>
+						</ul>
 					</div>
-				</aside>
-				<aside class="skills tab-content main"  id="skills">
-					<div class="wrapper">
-						<!-- <h1> This section is currently under construction. Please enjoy this gif party while you wait</h1>
-						<div class="container gif_party">
+				</div>
+			</nav>
+			<div class="hamb">
+				<a href="#"><i class="fa fa-bars"></i></a>
+			</div>
+			<div class="hero"></div>
+			<canvas id="bubble"></canvas>
+		</header>
+		<div class="welcome">
+			<i class="logo fade-in one"></i>
+			<h1 class="fade-in two">Hello <strong>World</strong></h1>
+			<p class="fade-in three" "text"><strong>I am </strong>Farishta Haider & I love
+				<span class="rw-words rw-words-1"> <span>tech.</span>
+				<span>web development.</span>
+				<span>pop culture.</span>
+				<span>marketing.</span>
+				<span>social media.</span>
+				<span>awkward moments.</span>
+			</span></p>
+			<p><a href="#resume" class="button fade-in four">Welcome to me</a></p>
+			<div class="scroll-down clear"><i class="fa fa-angle-double-down animated infinite bounce"></i>
+			</div>
+		</div>
+	</section>
+	<section id="about">
+		<div class="bg-image"></div>
+		<div class="holder">
+			<div class="title scrollflow -slide-top -opacity"><h2>About</h2></div>
+			<div id="tabs-container">
+				<ul class="tabs-menu title scrollflow -slide-top -opacity">
+					<li class="current"><a href="#bio">Bio</a></li>
+					<li><a href="#skills">Skills</a></li>
+					<li><a href="#experience">Experience</a></li>
+					<!-- <li><a href="#education">Education</a></li> -->
+				</ul>
+				<div class="tab">
+					<aside class="tab-content scrollflow -slide-right -opacity" id="bio">
+						<p>Hello, my name is  Farishta Haider.</br>
+							A <strong>Full-Stack Developer</strong> with a strong background in Marketing. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
+							<div class="links scrollflow"><a href="https://drive.google.com/open?id=0B9BDSYdQ3pr8S3F1NEhHd0lzeG8" target="_blank" class="button"><i class="fa fa-download"></i> Download Resume</a>
+								<a href="mailto:farishta.haider@gmail.com" class="button"><i class="fa fa-paper-plane"></i> Hire Me</a>
+							</div>
+						</div>
+					</aside>
+					<aside class="skills tab-content main"  id="skills">
+						<div class="wrapper">
+							<!-- <h1> This section is currently under construction. Please enjoy this gif party while you wait</h1>
+							<div class="container gif_party">
 							<img src="http://gifdanceparty.giphy.com/dancers/pumpgirl.gif">
 							<img src="https://cdn.discourse.org/turtlerock/uploads/default/original/3X/7/9/795656c869bf977ed160ec6ce2f598695a8cf6f3.gif">
 							<img src="https://49.media.tumblr.com/4a6589166bc392bf955f6dc8f92d3ac1/tumblr_nztpv1q1ua1tp5dmdo1_400.gif">
@@ -441,23 +442,23 @@
 		<div class="row">
 			<img src="images/university-of-maryland-logo.png">
 			<div class="brief">
-			<h1> Univeristy of Maryland</h1>
-			<h2> College Park, Maryland </h2>
-			<p> Communications</p>
-			<p> Bachelors of Arts & Humanities</p>
-			<p> Graduated May 2004</p>
+				<h1> Univeristy of Maryland</h1>
+				<h2> College Park, Maryland </h2>
+				<p> Communications</p>
+				<p> Bachelors of Arts & Humanities</p>
+				<p> Graduated May 2004</p>
+			</div>
 		</div>
-	</div>
 		<div class="row">
 			<img src="images/generalassembly-open-graph.png">
 			<div class="brief">
-			<h1>General Assembly</h1>
-			<h2>Washington, D.C.</h2>
-			<h3> Web Development Immersive</h3>
-			<p> Cohort 8</p>
-			<p> February 2016 - April 2016</p>
+				<h1>General Assembly</h1>
+				<h2>Washington, D.C.</h2>
+				<h3> Web Development Immersive</h3>
+				<p> Cohort 8</p>
+				<p> February 2016 - April 2016</p>
+			</div>
 		</div>
-	</div>
 	</aside>
 </div>
 </section>
@@ -543,10 +544,10 @@
 								<p1> Do you ever feel down in the dumps and need a quick cheer me up? Well then, Cheerie is the app for you. This delightful application was my second project for WDI. It is written in <strong> Ruby on Rails</strong></p1></br>
 								<p1> I chose this subject matter because I personally go to looks at gifs to cheer myself up and wanted to share this system to others to assist in turning their frowns upside down. </p1></br>
 								<div class="btn_container">
-								<button class="button fade-in four"><a href="https://github.com/LaFrish/Cheerie"><i class="fa fa-github"> Github Repo</i></a></button>
-								<button class="button fade-in four"><a href="http://cheerie.herokuapp.com/"><i class="fa fa-globe"> Cheerie Site</i></a></button>
+									<button class="button fade-in four"><a href="https://github.com/LaFrish/Cheerie"><i class="fa fa-github"> Github Repo</i></a></button>
+									<button class="button fade-in four"><a href="http://cheerie.herokuapp.com/"><i class="fa fa-globe"> Cheerie Site</i></a></button>
+								</div>
 							</div>
-						</div>
 						</div>
 					</div>
 				</div>
@@ -564,9 +565,9 @@
 								<p1> iCare is a web application that assists residents in the DC Metro area find volunteer events and share volunteer stories. iCare was created with a <strong>Ruby on Rails backend and AngularJS Frontend</strong>.</p1></br>
 								<p1>This was a group project created by Alexa Klien, Brittany Branson and I. My contribtion to the project was the event portion of the site.</p1></br>
 								<div class="btn_container">
-								<button class="button fade-in four"><a href="https://github.com/aklein916/iCare-Volunteer-Project"><i class="fa fa-github"> Github Repo</i></a></button>
-								<button class="button fade-in four"><a href="https://icare-volunteer-app.herokuapp.com/"><i class="fa fa-globe">iCare Site</i></a></button>
-							</div>
+									<button class="button fade-in four"><a href="https://github.com/aklein916/iCare-Volunteer-Project"><i class="fa fa-github"> Github Repo</i></a></button>
+									<button class="button fade-in four"><a href="https://icare-volunteer-app.herokuapp.com/"><i class="fa fa-globe">iCare Site</i></a></button>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -585,9 +586,9 @@
 								<p1> Node Vodka is the latest and greatest vodka line that is launching this summer. To celebrate their inaugrial year, they are hosting lucky winners at their Node Beach House. The Node Beach House is the latest experiential marketing campaigns from XYZ Marketing and this  website it the accompanying microsite for the tour. Extending the reach of the event long after the tour ends. There is a sweepstakes submission page to generate lead data, a photo pick up site that can be shared socially fully branded with Node's logo and mixologist section to show the many ways you are able to enjoy the vodka of the summer. And if you can't make it to the beach house, you can live vicariously through the experience by listening to Node Radio.</p1></br>
 								<p1> For our fourth and final project, I took my past experience in marketing with a developer twist. With the opportunity to use any language of our choise, I made this as a <strong>MEAN app</strong>.</p1></br>
 								<div class="btn_container">
-								<button class="button fade-in four"><a href="https://github.com/LaFrish/beachhouse"><i class="fa fa-github"> Github Repo</i></a></button>
-								<button class="button fade-in four"><a href=""><i class="fa fa-globe">Node Beachhouse</i></a></button>
-							</div>
+									<button class="button fade-in four"><a href="https://github.com/LaFrish/beachhouse"><i class="fa fa-github"> Github Repo</i></a></button>
+									<button class="button fade-in four"><a href=""><i class="fa fa-globe">Node Beachhouse</i></a></button>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -606,9 +607,9 @@
 								<p1> My last major program at GEICO was a true labor of love. Being the lead of the project from conception to when it ended it's first season on tour. This acclaimed tour was so successful that GEICO ordered a second bus tour to be on the road the next tour season. Working hand in hand with RedPeg Marketing, we created a truly interactive experience.</p1></br>
 								<p1>On entrance, we collected consumer data through a gas card giveway that they entered at our tabletop kiosks, then had a  photo opportunity using our GEICO overlays with specialized characters, were entertained by our EMCEE on stage while they waited to enter the bus. Once on the GEICO bus, the consumer played GEICO pinball while waiting for their turn to sing and dance with the gecko in GEICO Karaoke. A full fan experience at the largest events on the East Coast.</p1></br>
 								<div class="btn_container">
-								<button class="button fade-in four"><a href="https://drive.google.com/file/d/0B287eiUVjLsLdk8xMExWLUpMNlE/view?usp=sharing"><i class="fa fa-file-powerpoint-o"> GEICO Bus Tour Summary</i></a></button>
-								<button class="button fade-in four"><a href="http://www.eventmarketer.com/article/geico-takes-summer-tour-trio-mascots/"><i class="fa fa-file-o"> Bus Article</i></a></button>
-							</div>
+									<button class="button fade-in four"><a href="https://drive.google.com/file/d/0B287eiUVjLsLdk8xMExWLUpMNlE/view?usp=sharing"><i class="fa fa-file-powerpoint-o"> GEICO Bus Tour Summary</i></a></button>
+									<button class="button fade-in four"><a href="http://www.eventmarketer.com/article/geico-takes-summer-tour-trio-mascots/"><i class="fa fa-file-o"> Bus Article</i></a></button>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -636,15 +637,15 @@
 			<div class="copy">© Copyright 2016 Farishta Haider</div>
 		</div>
 	</section>
-	</canvas>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<!-- <script src="http://tympanus.net/codrops/adpacks/demoad.js"></script> -->
-	<script type="text/javascript" src="javascripts/modernizr.custom.js"></script>
-	<script type="text/javascript" src="javascripts/script.js"></script>
-	<script type="text/javascript" src="javascripts/html5shiv-printshiv.js"></script>
-	<script type="text/javascript" src="javascripts/jquery.js"></script>
-	<script type="text/javascript" src="javascripts/jquery.scrollflow.min.js"></script>
-	<script type="text/javascript" src="javascripts/jquery.easing.1.3.js"></script>
-	<script type="text/javascript" src="javascripts/jquery.bxslider.min.js"></script>
+</canvas>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<!-- <script src="http://tympanus.net/codrops/adpacks/demoad.js"></script> -->
+<script type="text/javascript" src="javascripts/modernizr.custom.js"></script>
+<script type="text/javascript" src="javascripts/script.js"></script>
+<script type="text/javascript" src="javascripts/html5shiv-printshiv.js"></script>
+<script type="text/javascript" src="javascripts/jquery.js"></script>
+<script type="text/javascript" src="javascripts/jquery.scrollflow.min.js"></script>
+<script type="text/javascript" src="javascripts/jquery.easing.1.3.js"></script>
+<script type="text/javascript" src="javascripts/jquery.bxslider.min.js"></script>
 </body>
 </html>
