--- a/index.html
+++ b/index.html
@@ -45,28 +45,34 @@
 	<!-- End Google Tag Manager -->
 	<section id="welcome">
 		<header class="close">
-			<nav role='navigation' id="mainnav">
-				<div class="relative">
-					<div class="holder">
-						<ul>
+			<nav role='navigation' id="menuToggle">
+				<!-- <div class="relative">
+					<div class="holder"> -->
+					<input type="checkbox" />
+					<span></span>
+					<span></span>
+					<span></span>
+
+						<ul id="menu">
 							<li><a href="#welcome">Home</a></li>
 							<li><a href="#about">About Me</a></li>
 							<li><a href="#portfolio">Testimonials</a></li>
 							<li><a href="#resume">Portfolio</a></li>
 							<li><a href="#contactMe">Contact Me</a></li>
 						</ul>
-					</div>
+					<!-- </div> -->
 				</div>
-			</nav>
-			<div class="hamb">
+				</nav>
+			<!-- <div class="hamb">
 				<a href="#"><i class="fa fa-bars"></i></a>
-			</div>
+			</div> -->
 			<div class="hero"></div>
 			<canvas id="bubble"></canvas>
+
 		</header>
 		<div class="welcome">
 			<i class="logo fade-in one"></i>
-			<h1 class="fade-in two">Hello <strong>World</strong></h1>
+			<h1 class="fade-in two">Hello, <strong>World</strong></h1>
 			<p class="fade-in three" "text"><strong>I am </strong>Farishta Haider & I love
 				<span class="rw-words rw-words-1"> <span>tech.</span>
 				<span>web development.</span>
@@ -79,6 +85,7 @@
 			<div class="scroll-down clear"><i class="fa fa-angle-double-down animated infinite bounce"></i>
 			</div>
 		</div>
+
 	</section>
 	<section id="about">
 		<div class="bg-image"></div>
@@ -637,7 +644,7 @@
 			<div class="copy">© Copyright 2016 Farishta Haider</div>
 		</div>
 	</section>
-</canvas>
+</nav>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <!-- <script src="http://tympanus.net/codrops/adpacks/demoad.js"></script> -->
 <script type="text/javascript" src="javascripts/modernizr.custom.js"></script>
@@ -647,5 +654,6 @@
 <script type="text/javascript" src="javascripts/jquery.scrollflow.min.js"></script>
 <script type="text/javascript" src="javascripts/jquery.easing.1.3.js"></script>
 <script type="text/javascript" src="javascripts/jquery.bxslider.min.js"></script>
+</nav>
 </body>
 </html>
