added meta data

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 	<link rel="stylesheet" href="stylesheets/animate.css">
 	<link rel="stylesheet" href="fonts/Audrey-Normal.css">
 	<link rel="stylesheet" href="devicon-master/devicon.min.css">
-	<link rel="stylesheet" href="devicon-master/devicon-colors.css">
 	<link rel="stylesheet" href="bitIcon/style.css">
 	<link rel="stylesheet" href="bitIcon/variables.scss">
 	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
@@ -32,6 +31,14 @@
 	ga('send', 'pageview');
 
 	</script>
+	<meta property="og:image" content="[url to image]" />
+<meta property="og:title" content="[page name]" />
+<meta property="og:description" content="[content description]" />
+<meta property="og:site_name" content="Farishta Haider's Portfolio"/>
+<meta property="og:title" content="Welcome to the wonderful world of Farishta Haider"/>
+<meta property="og:description" content="The professional portfolio for Farishta Haider. A web developer with a strong background in marketing."/>
+<meta property="og:image" content="images/portfolio_thumbnail.png">
+<meta property="og:url" content="http://farishtahaider.com/">
 </head>
 <body>
 	<!-- Google Tag Manager -->
@@ -636,7 +643,6 @@
 	</section>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<!-- <script src="http://tympanus.net/codrops/adpacks/demoad.js"></script> -->
 <script type="text/javascript" src="javascripts/modernizr.custom.js"></script>
 <script type="text/javascript" src="javascripts/script.js"></script>
 <script type="text/javascript" src="javascripts/html5shiv-printshiv.js"></script>
