--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <meta property="og:title" content="Welcome to the wonderful world of Farishta Haider"/>
 <meta property="og:description" content="The professional portfolio for Farishta Haider. A web developer with a strong background in marketing."/>
 <meta property="og:image" content="images/portfolio_thumbnail.png">
-<meta property="og:url" content="http://farishtahaider.com/">
+<meta property="og:url" content="http://lafrish.github.io/">
 </head>
 <body>
 	<!-- Google Tag Manager -->
