--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <meta property="og:description" content="The professional portfolio for Farishta Haider. A web developer with a strong background in marketing."/>
 <meta property="og:image" content="http://i.imgur.com/eAlmzHH.png">
 <meta property="og:url" content="http://lafrish.github.io/">
+<img src="http://i.imgur.com/eAlmzHH.png" alt="Farishta Haider's Portfolio Thumbnail">
 </head>
 <body>
 	<!-- Google Tag Manager -->
