--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
 <meta property="og:site_name" content="Farishta Haider's Portfolio"/>
 <meta property="og:title" content="Welcome to the wonderful world of Farishta Haider"/>
 <meta property="og:description" content="The professional portfolio for Farishta Haider. A web developer with a strong background in marketing."/>
-<meta property="og:image" content="http://i.imgur.com/eAlmzHH.png">
+<meta property="og:image" content="http://imgur.com/eAlmzHH">
 <meta property="og:url" content="http://lafrish.github.io/">
 <img src="http://i.imgur.com/eAlmzHH.png" alt="Farishta Haider's Portfolio Thumbnail">
+	<a href="http://imgur.com/eAlmzHH"><img src="http://i.imgur.com/eAlmzHH.png" title="Farishta Haider's Portfolio Thumbnail" /></a>
 </head>
 <body>
+
 	<!-- Google Tag Manager -->
 	<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-PXCWVZ"
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
