--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 	ga('send', 'pageview');
 
 	</script>
-	<!-- <meta property="og:image" content="[url to image]" />
+	<meta property="og:image" content="[url to image]" />
 <meta property="og:title" content="[page name]" />
 <meta property="og:description" content="[content description]" />
 <meta property="og:site_name" content="Farishta Haider's Portfolio"/>
 <meta property="og:title" content="Welcome to the wonderful world of Farishta Haider"/>
 <meta property="og:description" content="The professional portfolio for Farishta Haider. A web developer with a strong background in marketing."/>
-<meta property="og:image" content="http://imgur.com/eAlmzHH">
-<meta property="og:url" content="http://lafrish.github.io/"> -->
+<meta property="og:image" content="images/portfolio_thumbnail.png">
+<meta property="og:url" content="http://lafrish.github.io/">
 <img src="http://i.imgur.com/eAlmzHH.png" alt="Farishta Haider's Portfolio Thumbnail">
 	<a href="http://imgur.com/eAlmzHH"><img src="http://i.imgur.com/eAlmzHH.png" title="Farishta Haider's Portfolio Thumbnail" /></a>
 </head>
