changed testimonial button to pink

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 		</aside>
 		<aside class="experience tab-content"  id="experience">
 			<div class="row">
-				<img src="images/montage.png"></img></br>
+				<img src="images/montage.png" alt="Montage Marketing Group Logo"></img></br>
 				<div class="brief">
 				</br>
 				<span class="position">Marketing Consultant, July 2015 – Current</span>
@@ -401,7 +401,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<img src="images/geico-logo.jpg"></img>
+			<img src="images/geico-logo.jpg" alt="GEICO logo"></img>
 			<div class="brief">
 				<span class="position">Marketing Buyer – Events,   October 2012 – February 2015</span>
 				<li>Managed national event programs with our experiential marketing company. Activated 293 national events in 2013, 364 national events in 2014 with a 36% planned increase in 2015.</li>
@@ -432,7 +432,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<img src="images/summitlogo.jpg"></img>
+			<img src="images/summitlogo.jpg" alt="Summit Marketing logo"></img>
 			<div class="brief">
 				<span class="position">Program Accounts Manager, March 2004 – May 2007</span>
 				<li>Collaborated in a team of three to run Summit’s largest account, GEICO.</li>
@@ -445,7 +445,7 @@
 	</aside>
 	<aside class="experience tab-content">
 		<div class="row">
-			<img src="images/university-of-maryland-logo.png">
+			<img src="images/university-of-maryland-logo.png" alt="University of Maryland logo">
 			<div class="brief">
 				<h1> Univeristy of Maryland</h1>
 				<h2> College Park, Maryland </h2>
