added codepen link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
 	<link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css/scss">
 	<link rel="stylesheet" href="stylesheets/animate.css">
+	<link rel="stylesheet" href="stylesheets/Audrey-Normal.css">
 	<link rel="stylesheet" href="fonts/Audrey-Normal.css">
 	<link rel="stylesheet" href="devicon-master/devicon.min.css">
 	<link rel="stylesheet" href="bitIcon/style.css">
@@ -631,12 +632,13 @@
 			</div>
 			<div class="social">
 				<a href="https://www.behance.net/LaFrish" target="_blank"><i class="fa fa-behance"></i></a>
-				<a href="https://github.com/LaFrish" target="_blank"><i class="fa fa-github"></i>
-				</a>
+				<a href="https://github.com/LaFrish" target="_blank"><i class="fa fa-github"></i></a>
+				<a href="http://codepen.io/lafrish/" target="_blank"><i class="fa fa-codepen"></i></a>
 				<a href="https://www.linkedin.com/in/farishtahaider" target="_blank"><i class="fa fa-linkedin"></i></a>
 				<a href="https://www.facebook.com/farishta.haider" target="_blank"><i class="fa fa-facebook"></i></a>
 				<a href="https://twitter.com/lafrish" target="_blank"><i class="fa fa-twitter"></i></a>
 				<a href="https://plus.google.com/u/0/115133210735023070083/posts" target="_blank"><i class="fa fa-google-plus"></i></a>
+				<a href="https://profiles.generalassemb.ly/profiles/fhaider" target="_blank"><i class="fa fa-cog"></i></a>
 			</div>
 			<a href="mailto:farishta.haider@gmail.com" title="farishta.haider@gmail.com" class="button">Get in touch</a>
 			<div class="copy">© Copyright 2016 Farishta Haider</div>
