Put skills in testimonial section

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
 	</script>
 	<meta property="og:image" content="[url to image]" />
-<meta property="og:title" content="[page name]" />
-<meta property="og:description" content="[content description]" />
-<meta property="og:site_name" content="Farishta Haider's Portfolio"/>
-<meta property="og:title" content="Welcome to the wonderful world of Farishta Haider"/>
-<meta property="og:description" content="The professional portfolio for Farishta Haider. A web developer with a strong background in marketing."/>
-<meta property="og:image" content="images/portfolio_thumbnail.png">
-<meta property="og:url" content="http://lafrish.github.io/">
+	<meta property="og:title" content="[page name]" />
+	<meta property="og:description" content="[content description]" />
+	<meta property="og:site_name" content="Farishta Haider's Portfolio"/>
+	<meta property="og:title" content="Welcome to the wonderful world of Farishta Haider"/>
+	<meta property="og:description" content="The professional portfolio for Farishta Haider. A web developer with a strong background in marketing."/>
+	<meta property="og:image" content="images/portfolio_thumbnail.png">
+	<meta property="og:url" content="http://lafrish.github.io/">
 </head>
 <body>
 
@@ -133,7 +133,8 @@
 									</div>
 								</div>
 							</div>
-						</li><li>
+						</li>
+						<li>
 							<div class="ch-item css">
 								<h4>CSS</h4>
 								<i class="bitIcon-css"></i>
@@ -381,6 +382,19 @@
 								</div>
 							</div>
 						</li>
+						<li>
+							<div class="ch-item atom">
+								<h4>Haml</h4>
+								<i class="devicon-atom-original"></i>
+								<div class="ch-info-wrap">
+									<div class="ch-info">
+										<div class="ch-info-front atom"></div>
+										<div class="ch-info-back">
+										</div>
+									</div>
+								</div>
+							</div>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -469,11 +483,14 @@
 </div>
 </section>
 <section id="portfolio">
+<!-- <section id="portfolio"> -->
 	<div class="holder">
-		<div class="title scrollflow -slide-top -opacity"><h2>Testimonials</h2></div>
+		<div class="title scrollflow -slide-top -opacity"><h2>Skills</h2></div>
 		<div class="testimonial scrollflow -slide-top -opacity">
-			<ul class="bxslider">
-				<li>
+			<!-- <aside class="skills tab-content main"  id="skills"> -->
+				<!-- <div class="wrapper"> -->
+			<!-- <ul class="bxslider"> -->
+				<!-- <li>
 					<div>
 						<p class="quote">"Farishta worked with The Washington Post on one of our biggest annual events. She was instrumental in the success of this event with her pre-planning the event down to the day-of event execution. She was energetic and detail oriented during the event preparation. She helps to analyze projects from the beginning in order to troubleshoot any downstream problems. She was great to work with and very helpful!"</p>
 						<div class="client-info">Megan Nunn, </br> Production Manager at The Washington Post</div>
@@ -499,6 +516,269 @@
 							<div class="client-info">Peter Kirschner, </br>Marketing Planning Manager at Optum360</div>
 						</div>
 					</li>
+				</ul> -->
+				<ul class="ch-grid">
+					<li>
+						<div class="ch-item html">
+							<h4>HTML</h4>
+							<i class="bitIcon-html"></i>
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front html"></div>
+									<div class="ch-info-back">
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item css">
+							<h4>CSS</h4>
+							<i class="bitIcon-css"></i>
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front css"></div>
+									<div class="ch-info-back">
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item javascript">
+							<h4>JavaScript</h4>
+							<i class="devicon-javascript-plain"></i>
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front javascript"></div>
+									<div class="ch-info-back">
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item jquery">
+							<h4>jQuery</h4>
+							<i class="devicon-jquery-plain"></i>
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front jquery"></div>
+									<div class="ch-info-back">
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item ruby">
+							<h4>Ruby</h4>
+							<i class="devicon-ruby-plain"></i>
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front ruby"></div>
+									<div class="ch-info-back">
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item rails">
+							<h4>Ruby on Rails</h4>
+							<i class="devicon-rails-plain"></i>
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front rails"></div>
+									<div class="ch-info-back">
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item node">
+							<h4>NodeJS</h4>
+							<i class="devicon-nodejs-plain"></i>
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front node"></div>
+									<div class="ch-info-back">
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item angular">
+							<h4>AngularJS</h4>
+							<i class="devicon-angularjs-plain"></i>
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front angular"></div>
+									<h3>Bears Type</h3>
+									<div class="ch-info-back">
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item mongodb">
+							<h4>MongoDB</h4>
+							<i class="devicon-mongodb-plain"></i>
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front mongodb"></div>
+									<div class="ch-info-back">
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item postgresql">
+							<h4>postgreSQL</h4>
+							<i class="devicon-postgresql-plain"></i>
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front postgresql"></div>
+									<div class="ch-info-back">
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item mysql">
+							<h4>mySQL</h4>
+							<i class="devicon-mysql-plain"></i>
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front mysql"></div>
+									<div class="ch-info-back">
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item wordpress">
+							<h4>Wordpress</h4>
+							<i class="devicon-wordpress-plain"></i>
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front wordpress"></div>
+									<div class="ch-info-back">
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item php">
+							<h4>php</h4>
+							<i class="devicon-php-plain"></i>
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front php"></div>
+									<div class="ch-info-back">
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item git">
+							<h4>Git</h4>
+							<i class="devicon-git-plain"></i>
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front git"></div>
+									<div class="ch-info-back">
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item sass">
+							<h4>Sass</h4>
+							<i class="devicon-sass-plain"></i>
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front sass"></div>
+									<div class="ch-info-back">
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item illustrator">
+							<h4>Illustrator</h4>
+							<i class="devicon-illustrator-line"></i>
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front illustrator"></div>
+									<div class="ch-info-back">
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item photoshop">
+							<h4>Photoshop</h4>
+							<i class="devicon-photoshop-line"></i>
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front photoshop"></div>
+									<div class="ch-info-back">
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item heroku">
+							<h4>Heroku</h4>
+							<i class="devicon-heroku-original"></i>
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front heroku"></div>
+									<div class="ch-info-back">
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item github">
+							<h4>Github</h4>
+							<i class="devicon-github-original"></i>
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front github"></div>
+									<div class="ch-info-back">
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item atom">
+							<h4>Atom</h4>
+							<i class="devicon-atom-original"></i>
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front atom"></div>
+									<div class="ch-info-back">
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
 				</ul>
 			</div>
 		</div>
@@ -511,8 +791,8 @@
 					<button class="button fade-in four" id='showall'>Show All</button>
 					<button class="button fade-in four"id="web">Web Development</button>
 					<button class="button fade-in four" id='marketing'>Marketing</button>
-					<!-- <button class='button fade-in four' id='graphic'>Graphic Design</button>
-					<button class='button fade-in four' id='social'>Social Media</button> -->
+					<button class='button fade-in four' id='graphic'>Graphic Design</button>
+					<button class='button fade-in four' id='social'>Social Media</button>
 				</div>
 				<div class="gallery_containers">
 					<div class="project">
