--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 			<div id="tabs-container">
 				<ul class="tabs-menu title scrollflow -slide-top -opacity">
 					<li class="current"><a href="#bio">Bio</a></li>
-					<li><a href="#skills">Skills</a></li>
+					<li><a href="#education">Education</a></li>
 					<li><a href="#experience">Experience</a></li>
-					<!-- <li><a href="#education">Education</a></li> -->
+					<li><a href="#testimonials">Testimonial</a></li>
 				</ul>
 				<div class="tab">
 					<aside class="tab-content scrollflow -slide-right -opacity" id="bio">
@@ -106,299 +106,28 @@
 							</div>
 						</div>
 					</aside>
-					<aside class="skills tab-content main"  id="skills">
-						<div class="wrapper">
-							<!-- <h1> This section is currently under construction. Please enjoy this gif party while you wait</h1>
-							<div class="container gif_party">
-							<img src="http://gifdanceparty.giphy.com/dancers/pumpgirl.gif">
-							<img src="https://cdn.discourse.org/turtlerock/uploads/default/original/3X/7/9/795656c869bf977ed160ec6ce2f598695a8cf6f3.gif">
-							<img src="https://49.media.tumblr.com/4a6589166bc392bf955f6dc8f92d3ac1/tumblr_nztpv1q1ua1tp5dmdo1_400.gif">
-							<img src="http://static.fjcdn.com/gifs/Dance+party+https+wwwyoutubecom+watch+v+2hqabwziyvy_5d4902_5417951.gif">
-							<img src="http://i.giphy.com/mf1KcWoiyAcNO.gif">
-							<img src="http://paulalalalalalalalalalalalalalalalalalalalalalalalalalalalalala.land/images/giphy.gif">
-							<img src="https://66.media.tumblr.com/504cb94fe0f41e563f435ee2f833dcb5/tumblr_n47d7f7uFv1rt5pgzo1_400.gif">
-							<img src="https://m.popkey.co/1d6426/Wp00d.gif">
+					<aside class="education tab-content"  id="education">
+						<div class="row">
+							<img src="images/university-of-maryland-logo.png" alt="University of Maryland logo">
+							<div class="brief">
+								<h1> Univeristy of Maryland</h1>
+								<h2> College Park, Maryland </h2>
+								<p> Communications</p>
+								<p> Bachelors of Arts & Humanities</p>
+								<p> Graduated May 2004</p>
+							</div>
 						</div>
-					</br> -->
-					<ul class="ch-grid">
-						<li>
-							<div class="ch-item html">
-								<h4>HTML</h4>
-								<i class="bitIcon-html"></i>
-								<div class="ch-info-wrap">
-									<div class="ch-info">
-										<div class="ch-info-front html"></div>
-										<div class="ch-info-back">
-										</div>
-									</div>
-								</div>
+						<div class="row">
+							<img src="images/1ga_logo.jpg" alt="General Assembly Logo">
+							<div class="brief">
+								<h1>General Assembly</h1>
+								<h2>Washington, D.C.</h2>
+								<h3> Web Development Immersive</h3>
+								<p> Cohort 8</p>
+								<p> February 2016 - April 2016</p>
 							</div>
-						</li>
-						<li>
-							<div class="ch-item css">
-								<h4>CSS</h4>
-								<i class="bitIcon-css"></i>
-								<div class="ch-info-wrap">
-									<div class="ch-info">
-										<div class="ch-info-front css"></div>
-										<div class="ch-info-back">
-										</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="ch-item javascript">
-								<h4>JavaScript</h4>
-								<i class="devicon-javascript-plain"></i>
-								<div class="ch-info-wrap">
-									<div class="ch-info">
-										<div class="ch-info-front javascript"></div>
-										<div class="ch-info-back">
-										</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="ch-item jquery">
-								<h4>jQuery</h4>
-								<i class="devicon-jquery-plain"></i>
-								<div class="ch-info-wrap">
-									<div class="ch-info">
-										<div class="ch-info-front jquery"></div>
-										<div class="ch-info-back">
-										</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="ch-item ruby">
-								<h4>Ruby</h4>
-								<i class="devicon-ruby-plain"></i>
-								<div class="ch-info-wrap">
-									<div class="ch-info">
-										<div class="ch-info-front ruby"></div>
-										<div class="ch-info-back">
-										</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="ch-item rails">
-								<h4>Ruby on Rails</h4>
-								<i class="devicon-rails-plain"></i>
-								<div class="ch-info-wrap">
-									<div class="ch-info">
-										<div class="ch-info-front rails"></div>
-										<div class="ch-info-back">
-										</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="ch-item angular">
-								<h4>AngularJS</h4>
-								<i class="devicon-angularjs-plain"></i>
-								<div class="ch-info-wrap">
-									<div class="ch-info">
-										<div class="ch-info-front angular"></div>
-										<h3>Bears Type</h3>
-										<div class="ch-info-back">
-										</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="ch-item node">
-								<h4>NodeJS</h4>
-								<i class="devicon-nodejs-plain"></i>
-								<div class="ch-info-wrap">
-									<div class="ch-info">
-										<div class="ch-info-front node"></div>
-										<div class="ch-info-back">
-										</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="ch-item mongodb">
-								<h4>MongoDB</h4>
-								<i class="devicon-mongodb-plain"></i>
-								<div class="ch-info-wrap">
-									<div class="ch-info">
-										<div class="ch-info-front mongodb"></div>
-										<div class="ch-info-back">
-										</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="ch-item postgresql">
-								<h4>postgreSQL</h4>
-								<i class="devicon-postgresql-plain"></i>
-								<div class="ch-info-wrap">
-									<div class="ch-info">
-										<div class="ch-info-front postgresql"></div>
-										<div class="ch-info-back">
-										</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="ch-item mysql">
-								<h4>mySQL</h4>
-								<i class="devicon-mysql-plain"></i>
-								<div class="ch-info-wrap">
-									<div class="ch-info">
-										<div class="ch-info-front mysql"></div>
-										<div class="ch-info-back">
-										</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="ch-item wordpress">
-								<h4>Wordpress</h4>
-								<i class="devicon-wordpress-plain"></i>
-								<div class="ch-info-wrap">
-									<div class="ch-info">
-										<div class="ch-info-front wordpress"></div>
-										<div class="ch-info-back">
-										</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="ch-item php">
-								<h4>php</h4>
-								<i class="devicon-php-plain"></i>
-								<div class="ch-info-wrap">
-									<div class="ch-info">
-										<div class="ch-info-front php"></div>
-										<div class="ch-info-back">
-										</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="ch-item git">
-								<h4>Git</h4>
-								<i class="devicon-git-plain"></i>
-								<div class="ch-info-wrap">
-									<div class="ch-info">
-										<div class="ch-info-front git"></div>
-										<div class="ch-info-back">
-										</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="ch-item sass">
-								<h4>Sass</h4>
-								<i class="devicon-sass-plain"></i>
-								<div class="ch-info-wrap">
-									<div class="ch-info">
-										<div class="ch-info-front sass"></div>
-										<div class="ch-info-back">
-										</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="ch-item illustrator">
-								<h4>Illustrator</h4>
-								<i class="devicon-illustrator-line"></i>
-								<div class="ch-info-wrap">
-									<div class="ch-info">
-										<div class="ch-info-front illustrator"></div>
-										<div class="ch-info-back">
-										</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="ch-item photoshop">
-								<h4>Photoshop</h4>
-								<i class="devicon-photoshop-line"></i>
-								<div class="ch-info-wrap">
-									<div class="ch-info">
-										<div class="ch-info-front photoshop"></div>
-										<div class="ch-info-back">
-										</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="ch-item heroku">
-								<h4>Heroku</h4>
-								<i class="devicon-heroku-original"></i>
-								<div class="ch-info-wrap">
-									<div class="ch-info">
-										<div class="ch-info-front heroku"></div>
-										<div class="ch-info-back">
-										</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="ch-item github">
-								<h4>Github</h4>
-								<i class="devicon-github-original"></i>
-								<div class="ch-info-wrap">
-									<div class="ch-info">
-										<div class="ch-info-front github"></div>
-										<div class="ch-info-back">
-										</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="ch-item atom">
-								<h4>Atom</h4>
-								<i class="devicon-atom-original"></i>
-								<div class="ch-info-wrap">
-									<div class="ch-info">
-										<div class="ch-info-front atom"></div>
-										<div class="ch-info-back">
-										</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="ch-item atom">
-								<h4>Haml</h4>
-								<i class="devicon-atom-original"></i>
-								<div class="ch-info-wrap">
-									<div class="ch-info">
-										<div class="ch-info-front atom"></div>
-										<div class="ch-info-back">
-										</div>
-									</div>
-								</div>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</aside>
+						</div>
+					</aside>
 		<aside class="experience tab-content"  id="experience">
 			<div class="row">
 				<img src="images/montage.png" alt="Montage Marketing Group Logo"></img></br>
@@ -458,39 +187,14 @@
 			</div>
 		</div>
 	</aside>
-	<aside class="experience tab-content">
-		<div class="row">
-			<img src="images/university-of-maryland-logo.png" alt="University of Maryland logo">
-			<div class="brief">
-				<h1> Univeristy of Maryland</h1>
-				<h2> College Park, Maryland </h2>
-				<p> Communications</p>
-				<p> Bachelors of Arts & Humanities</p>
-				<p> Graduated May 2004</p>
-			</div>
-		</div>
-		<div class="row">
-			<img src="images/generalassembly-open-graph.png">
-			<div class="brief">
-				<h1>General Assembly</h1>
-				<h2>Washington, D.C.</h2>
-				<h3> Web Development Immersive</h3>
-				<p> Cohort 8</p>
-				<p> February 2016 - April 2016</p>
-			</div>
-		</div>
-	</aside>
-</div>
-</section>
-<section id="portfolio">
-<!-- <section id="portfolio"> -->
+	<aside class="testimonial tab-content main"  id="testimonials">
 	<div class="holder">
-		<div class="title scrollflow -slide-top -opacity"><h2>Skills</h2></div>
-		<div class="testimonial scrollflow -slide-top -opacity">
-			<!-- <aside class="skills tab-content main"  id="skills"> -->
+		<!-- <div class="title scrollflow -slide-top -opacity"><h2>Skills</h2></div> -->
+		<!-- <div class="testimonial scrollflow -slide-top -opacity"> -->
+
 				<!-- <div class="wrapper"> -->
-			<!-- <ul class="bxslider"> -->
-				<!-- <li>
+			<ul class="bxslider">
+				<li>
 					<div>
 						<p class="quote">"Farishta worked with The Washington Post on one of our biggest annual events. She was instrumental in the success of this event with her pre-planning the event down to the day-of event execution. She was energetic and detail oriented during the event preparation. She helps to analyze projects from the beginning in order to troubleshoot any downstream problems. She was great to work with and very helpful!"</p>
 						<div class="client-info">Megan Nunn, </br> Production Manager at The Washington Post</div>
@@ -516,7 +220,13 @@
 							<div class="client-info">Peter Kirschner, </br>Marketing Planning Manager at Optum360</div>
 						</div>
 					</li>
-				</ul> -->
+				</ul>
+</div>
+</section>
+<section id="portfolio">
+	<div class="holder">
+		<div class="title scrollflow -slide-top -opacity"><h2>Skills</h2></div>
+		<div class="testimonial scrollflow -slide-top -opacity">
 				<ul class="ch-grid">
 					<li>
 						<div class="ch-item html">
@@ -791,9 +501,10 @@
 					<button class="button fade-in four" id='showall'>Show All</button>
 					<button class="button fade-in four"id="web">Web Development</button>
 					<button class="button fade-in four" id='marketing'>Marketing</button>
-					<button class='button fade-in four' id='graphic'>Graphic Design</button>
+					<!-- <button class='button fade-in four' id='graphic'>Graphic Design</button> -->
 					<button class='button fade-in four' id='social'>Social Media</button>
 				</div>
+				<div class="ch-grid">
 				<div class="gallery_containers">
 					<div class="project">
 						<div class="web gallery_container">
@@ -882,7 +593,7 @@
 				<div class="gallery_containers">
 					<div class="project">
 						<div class="web gallery_container">
-							<img src="http://i.imgur.com/BdCNVFcl.png" alt="Node Beach House">
+							<img src="http://i.imgur.com/BdCNVFcl.png" alt="WDI Yearbook">
 							<div class='project_info' onclick=''>
 								<h3>WDI Yearbook</h3>
 								<button class="gal_btn4 fade-in four">View Details</button>
@@ -923,6 +634,7 @@
 				</div>
 			</div>
 		</div>
+		</div>
 	</section>
 	<section id="contactMe">
 		<div class="holder">
@@ -945,7 +657,6 @@
 			<div class="copy">© Copyright 2016 Farishta Haider</div>
 		</div>
 	</section>
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript" src="javascripts/modernizr.custom.js"></script>
 <script type="text/javascript" src="javascripts/script.js"></script>
