fixed scroll spacing

--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
 			<i class="logo fade-in one"></i>
 			<h1 class="fade-in two">Hello, <strong>World</strong></h1>
 			<p class="fade-in three" "text"><strong>I am </strong>Farishta Haider & I love
-				<span class="rw-words rw-words-1"> <span>tech.</span>
+				<span class="rw-words rw-words-1"><span>tech.</span>
 				<span>web development.</span>
 				<span>pop culture.</span>
 				<span>marketing.</span>
 				<span>social media.</span>
-				<span>awkward moments.</span>
+				<span>gifs.</span>
 			</span></p>
-			<p><a href="#resume" class="button fade-in four">Welcome to me</a></p>
+			<p><a href="#about" class="button fade-in four">Welcome to me</a></p>
 			<div class="scroll-down clear"><i class="fa fa-angle-double-down animated infinite bounce"></i>
 			</div>
 		</div>
