--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<ul id="menu">
 							<li><a href="#welcome">Home</a></li>
 							<li><a href="#about">About Me</a></li>
-							<li><a href="#portfolio">Testimonials</a></li>
+							<li><a href="#portfolio">Skills</a></li>
 							<li><a href="#resume">Portfolio</a></li>
 							<li><a href="#contactMe">Contact Me</a></li>
 						</ul>
@@ -89,13 +89,13 @@
 	<section id="about">
 		<div class="bg-image"></div>
 		<div class="holder">
-			<div class="title scrollflow -slide-top -opacity"><h2>About</h2></div>
+			<div class="title scrollflow -slide-top -opacity"><h2>About Me</h2></div>
 			<div id="tabs-container">
 				<ul class="tabs-menu title scrollflow -slide-top -opacity">
 					<li class="current"><a href="#bio">Bio</a></li>
 					<li><a href="#education">Education</a></li>
 					<li><a href="#experience">Experience</a></li>
-					<li><a href="#testimonials">Testimonial</a></li>
+					<li><a href="#testimonials">Testimonials</a></li>
 				</ul>
 				<div class="tab">
 					<aside class="tab-content scrollflow -slide-right -opacity" id="bio">
@@ -234,7 +234,7 @@
 							<i class="bitIcon-html"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front html"></div>
+									<div class="ch-info-front html">WORD</div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -247,7 +247,9 @@
 							<i class="bitIcon-css"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front css"></div>
+									<div class="ch-info-front css">
+										<h3>Skill</br> level</br>Intermediate</h3>
+									</div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -326,7 +328,7 @@
 							<div class="ch-info-wrap">
 								<div class="ch-info">
 									<div class="ch-info-front angular"></div>
-									<h3>Bears Type</h3>
+									<h3></h3>
 									<div class="ch-info-back">
 									</div>
 								</div>
